--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Christmas-Books-of-Mr.-M.A.-Titmarsh_2731
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Thackeray, William Makepeace
@@ -12,6 +15,8 @@ creator:
     - http://en.wikipedia.org/wiki/William_Makepeace_Thackeray
     - http://www.victorianweb.org/authors/wmt/wmtov.html
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2731#The-Christmas-Books-of-Mr.-M.A.-Titmarsh
 gutenberg_bookshelf: Christmas
 gutenberg_issued: '2006-05-25'
 gutenberg_type: Text
